// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithLimit /> by default matches with snapshot 1`] = `
<div
  className="sc-AxgMl kjOsln"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxhUy fcYjxG"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-AxheI bpaTkb"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="sc-AxgMl kjOsln"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxhUy fcYjxG"
    defaultValue=""
    disabled={true}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-AxheI isWxau"
    disabled={true}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`error\` prop matches with snapshot 1`] = `
<div
  className="sc-AxgMl kjOsln"
>
  <input
    className="sc-AxirZ hdggzc sc-AxhUy cHjchv"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-AxheI bpaTkb"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`tiny\` prop matches with snapshot 1`] = `
<div
  className="sc-AxgMl kjOsln"
>
  <input
    className="sc-AxirZ gUZorU sc-AxhUy fcYjxG"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-AxheI bpaTkb"
    disabled={false}
  >
    80
  </div>
</div>
`;
